--- a/ansible/roles/springrestpoc_openshift/templates/springrestpoc_secret.j2
+++ b/ansible/roles/springrestpoc_openshift/templates/springrestpoc_secret.j2
@@ -1,9 +1,9 @@
 apiVersion: v1
 stringData:
-  jdbcUrl: "jdbc:postgresql://postgres.{{POSTGRES_NAMESPACE}}.svc:5432/{{POSTGRES_DB_NAME}}"
-  jdbcUsername: "{{POSTGRES_DB_USER}}"
-  jdbcPassword: "{{POSTGRES_DB_PASSWORD}}"
-  jdbcDatabase: "{{POSTGRES_DB_NAME}}"
+  SPRINGRESTPOC_DB_URL: "jdbc:postgresql://postgres.{{POSTGRES_NAMESPACE}}.svc:5432/{{SPRINGRESTPOC_DB_NAME}}"
+  SPRINGRESTPOC_DB_USER: "{{SPRINGRESTPOC_DB_USER}}"
+  SPRINGRESTPOC_DB_PASSWORD: "{{SPRINGRESTPOC_DB_PASSWORD}}"
+  SPRINGRESTPOC_DB_NAME: "{{SPRINGRESTPOC_DB_NAME}}"
   jdbcHost: "{{POSTGRES_HOST_NAME}}"
   jdbcPort: "{{POSTGRES_PORT}}"
 kind: Secret
